--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -36,6 +36,7 @@
         <hgroup>
           <h2>Bek Hodgson</h2>
           <h3>Creative Director</h3>
+          <span class="toggle"></span>
         </hgroup>
 
         <p>Bek Hodgson is a designer and strategist who has worked to define
@@ -59,6 +60,7 @@
         <hgroup>
           <h2>Zak Johnson</h2>
           <h3>Technologist</h3>
+          <span class="toggle"></span>
         </hgroup>
 
         <p>Zak Johnson has architected and developed software for over a
