Clear shortlist window; FF fix

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -391,6 +391,7 @@ body.splash-transition
       padding-right: 200%
 
     .dev-shortlist-window
+      clear: left
       overflow: hidden
       position: relative
 
