Fix animation delay on loading indicator for mobile; refs #25

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -96,6 +96,7 @@ button, .button, .button-arrow
   color: cabin_grey_med
   b
     animation-name: loading-dots
+    animation-delay: 0
     animation-duration: 1s
     animation-timing-function: steps(1)
     animation-iteration-count: infinite
