--- a/cabin/templates/project.html
+++ b/cabin/templates/project.html
@@ -107,14 +107,14 @@
       <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ share_image_url }}" class="pinterest">Pinterest</a>
     </div>
     {% if project.images|length > 1 %}
-    <div class="pinterest-image-picker" hidden>
+    <div class="pinterest-image-picker" hidden><div>
       {% for image in project.images %}
-        <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ image_url(image.file)|external_url|urlquote }}">
+        <a href="http://pinterest.com/pin/create/button/?url={{ url }}&description={{ title }}&media={{ image_url(image.file)|external_url|urlquote }}" data-height="{{ image.height }}">
           <img src="{{ image_url(image.file) }}" alt>
           <span class="button">Pin it</span>
         </a>
       {% endfor %}
-    </div>
+    </div></div>
     {% endif %}
     <a class="arrow-right" href="{{ url_for('main.project', slug=project.next_slug) }}">Next</a>
   {% endwith %}
