Add selected state for pinterest button
Display it as if it's hovered while the popup is visible, affording a
click to close. Fixes #54.

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -1030,7 +1030,7 @@ body.splash-transition
           float: left
           margin-left: 5px
           background-color: black
-          &:hover
+          &:hover, &.selected
             background-color: cabin_bronze
 
       .pinterest-image-picker
