--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -191,13 +191,14 @@ rule-behind(text_container_element, color = cabin_black)
 
 body > header
   absolute: top left; right: 0
+  // Absolute path here to prevent Stylus from inlining this image twice.
   background: cabin_black url(/static/splash-dots.png)
   .backgroundsize.multiplebgs &
     background-color: cabin_black
     background-image:
       url(/static/splash-dots.png), url(/static/splash.jpg)
     background-position: center center
-    background-size: 27px 15px, cover
+    background-size: auto, cover
   color: white
   display: none
   overflow: hidden
@@ -1541,8 +1542,8 @@ body.splash-transition
 // Retina images.
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5)
   .backgroundsize.multiplebgs body > header
-    background-image:
-      url(/static/splash-dots@2x.png), url(/static/splash.jpg)
+    s = image-size('splash-dots.png')
+    background-size: (s[0] / 2) (s[1] / 2), cover
   .page-about section.colophon .signature
     background-image: url(signed-cabin@2x.png)
 
