Allow for project image slideshows; fixes #60

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -1500,6 +1500,8 @@ body.splash-transition
         input
           absolute: top left; right: 0; bottom: 0
           opacity: 0
+      .checkbox
+        absolute: top 90px left
       .dropper
         background: cabin_grey_light
         margin-left: 280px
