--- a/cabin/templates/admin/project.html
+++ b/cabin/templates/admin/project.html
@@ -87,6 +87,9 @@
         Select files
         <input type="file" multiple>
       </a>
+      <div class="checkbox">
+        {{ form.is_slideshow }} {{ form.is_slideshow.label }}
+      </div>
       <figure class="dropper">
         <figcaption><span class="icon image-upload"></span>
         Drag &amp; drop project images
