Test out Crimson Text as headline font; refs #50

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -10,7 +10,8 @@ cabin_mustard = #edbc13
 cabin_bronze = #ab9960
 default_tap_highlight_color = rgba(26, 26, 26, 0.3)
 body_font = ProximaNova, Helvetica Neue, Helvetica, sans-serif
-headline_font = 'YWFT Ultramagnetic Light'  // XXX backup?
+// headline_font = 'YWFT Ultramagnetic Light'  // XXX backup?
+headline_font = 'Crimson Text'  // XXX backup?
 headline_size = 30px
 headline_lh = 1.33
 headline_height = headline_size * headline_lh
@@ -245,7 +246,8 @@ body > header
     letter-spacing: 1px
     text-transform: uppercase
   h2
-    font: 17px/1.33 body_font
+    // font: 17px/1.33 body_font  // commented while testing crimson
+    font: normal 17px/1.33 headline_font
     white-space: nowrap
     // Custom linebreaks; "white-space: pre" is added for f/m classes.
     .br:before
