--- a/cabin/templates/base-full.html
+++ b/cabin/templates/base-full.html
@@ -21,6 +21,8 @@
     <meta name="description" content="{{ description }}">
   {%- endwith %}
 
+  {# XXX temporary while testing out Crimson #}
+  <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400' rel='stylesheet' type='text/css'>
   {% assets 'screen.css', 'icons.css' -%}
     <link href="{{ ASSET_URL }}" rel="stylesheet">
   {%- endassets %}
