--- a/cabin/templates/401.html
+++ b/cabin/templates/401.html
@@ -11,7 +11,7 @@
     <h2>Unauthorized /<br> Busted chop</h2>
     <div class="code">401</div>
     <p>
-      <a href="mailto:xo@madebycabin.com" class="button-arrow">Request access</a>
+      <a href="mailto:xo@madebycabin.com" class="button-arrow button-black">Request access</a>
     </p>
   </div>
 {% endblock %}
