--- a/cabin/templates/404.html
+++ b/cabin/templates/404.html
@@ -11,8 +11,8 @@
     <h2>Page not found /<br> Just cry about it</h2>
     <div class="code">404</div>
     <p>
-      <a href="{{ url_for('main.work') }}" class="button">Browse our work</a>
-      <a href="mailto:xo@madebycabin.com" class="button-arrow">Email us</a>
+      <a href="{{ url_for('main.work') }}" class="button-black">Browse our work</a>
+      <a href="mailto:xo@madebycabin.com" class="button-arrow button-black">Email us</a>
     </p>
   </div>
 {% endblock %}
