--- a/cabin/templates/500.html
+++ b/cabin/templates/500.html
@@ -11,8 +11,8 @@
     <h2>Server error /<br> Try the old refresh</h2>
     <div class="code">500</div>
     <p>
-      <a href="{{ request.url }}" class="button">Reload the page</a>
-      <a href="mailto:xo@madebycabin.com" class="button-arrow">Email us</a>
+      <a href="{{ request.url }}" class="button-black">Reload the page</a>
+      <a href="mailto:xo@madebycabin.com" class="button-arrow button-black">Email us</a>
     </p>
   </div>
 {% endblock %}
