Add gradient to client images; refs #50

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -1275,13 +1275,13 @@ body.splash-transition
         overflow: hidden
         white-space: nowrap
       a
-        background-color: cabin_hl_light
+        hl-background()
         float: left
         margin-left: 27px
         &:first-child
           margin-left: 0
         &:hover
-          background-color: cabin_black
+          background: cabin_black
 
     section.services
       font-size: 13px
