--- a/cabin/style/client-logos.styl
+++ b/cabin/style/client-logos.styl
@@ -3,14 +3,21 @@
 client(class, retina = false)
   .clients .{class}
     filename = 'clients/' + class + (retina ? '@2x' : '') + '.png'
-    background-image: url(filename)
-    background-repeat: no-repeat
-    background-position: center center
+    position: relative
+    &:before
+      absolute: left top
+      background-image: url(filename)
+      background-repeat: no-repeat
+      background-position: center center
+      content: ""
+      display: inline-block
     unless retina
       s = image-size(filename)
-      background-size: s[0] s[1]
-      width: s[0]
-      height: s[1]
+      &, &:before
+        width: s[0]
+        height: s[1]
+      &:before
+        background-size: s[0] s[1]
 
 .clients a
   hide-text()
