Fix mobile/connect social icons

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -32,10 +32,11 @@ social-icon(network, retina = false)
 .icon
   icon-base(16px)
 
-.social > a, .connect li
+.social > a
   hide-text()
   width: 26px
   height: 26px
+.social > a, .connect li
   &:before
     icon-base(26px)
     absolute: left top
