Don't show hover state on touch for arrows; refs #50

--- a/cabin/style/icons.styl
+++ b/cabin/style/icons.styl
@@ -64,12 +64,12 @@ icon(trash)
 .arrow-left
   &:before
     background-image: url('icons/arrow-left-grey.png')
-  &:hover:before
+  .no-touch &:hover:before
     background-image: url('icons/arrow-left-white.png')
 .arrow-right
   &:before
     background-image: url('icons/arrow-right-grey.png')
-  &:hover:before
+  .no-touch &:hover:before
     background-image: url('icons/arrow-right-white.png')
 .button-arrow:after
   img = 'icons/button-arrow-white.png'
@@ -112,12 +112,12 @@ social-icon(twitter)
   .arrow-left
     &:before
       background-image: url('icons/arrow-left-grey@2x.png')
-    &:hover:before
+    .no-touch &:hover:before
       background-image: url('icons/arrow-left-white@2x.png')
   .arrow-right
     &:before
       background-image: url('icons/arrow-right-grey@2x.png')
-    &:hover:before
+    .no-touch &:hover:before
       background-image: url('icons/arrow-right-white@2x.png')
   .button-arrow:after
     background-image: url('icons/button-arrow-white@2x.png')
