Add explicit tel: link; fixes #67

--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -136,7 +136,7 @@
     <section class="connect">
       <ol>
         <li class="email"><a href="mailto:xo@madebycabin.com">Email</a></li>
-        <li class="phone">415 255 5473</li>
+        <li class="phone"><a href="tel:+14152555473">415 255 5473</a></li>
         <li class="tumblr"><a target="_blank" href="http://madebycabin.tumblr.com/">Blog</a></li>
         <li class="facebook"><a target="_blank" href="https://www.facebook.com/madebycabin">Facebook</a></li>
         <li class="twitter"><a target="_blank" href="https://twitter.com/madebycabin">Twitter</a></li>
