Clean up unused SVG styles

--- a/cabin/style/screen.styl
+++ b/cabin/style/screen.styl
@@ -550,14 +550,8 @@ body.splash-transition
       margin-right: 5px
       .no-touch &:hover
         hl-background()
-  .graph
-    .svg
-      white-space: nowrap
-      svg
-        vertical-align: top
-        display: inline-block
-    .notes
-      display: none
+  .graph .notes
+    display: none
     // XXX fallback png for lame-os
   // Hide these until their image stylesheet is loaded.
   .clients a
