--- a/cabin/templates/about.html
+++ b/cabin/templates/about.html
@@ -11,7 +11,7 @@
   </div>
 
   <h1>It takes two<br>to make a thing<br>go right.</h1>
-  <span class="photo bek shadow-right"></span>
+  <span class="photo bek shadow-right shadow-top"></span>
   <span class="photo zak shadow-left"></span>
 
   <div class="sections">
